--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
     <!-- Main container -->
     <div class="main-container">
-        <div class="area">
             <ul class="circles">
                <li></li>
                <li></li>
@@ -30,7 +29,6 @@
                <li></li>
                <li></li>
             </ul>
-         </div>
         <!-- Nav container -->
         <div class="nav-container">
             <div class="box-1">
@@ -53,10 +51,17 @@
         <!-- Text container -->
         <div class="text-container">
             <h2>The Creative Website <br>Designers</h2>
-            <h3>The team a atomic designs work's day and night to bring you that stunning website that'll take the eyes of your audience and bring them closer to your business, reach out to us today and get your quote.</h3>
+            <h3>The team at atomic designs work's day and night to bring you that stunning website that'll take the eyes of your audience and bring them closer to your business, reach out to us today and get your quote.</h3>
             <div class="cont">
                 <a href="#">Get Started</a>
                 <a href="#">Discover More</a>
+            </div>
+        </div>
+        <!-- Container 1 -->
+        <div class="container-1">
+            <div class="text-container1">
+                <h2>Time to say a huge no to all the time wasters!!</h2>
+                <h3>We'll take care of all your designing needs, strategic planing <br> and even implementation and monitoring</h3>
             </div>
         </div>
     </div>
